# advent-of-code

./: README.md
aoc25/: CMakeLists.txt  main.c
aoc25/day1/: day_one.c
aoc25/day2/: day_two.c  day_two.h
aoc25/day3/: day_three.c  day_three.h
aoc25/day4/: day_four.c  day_four.h
aoc25/day5/: day_five.c  day_five.h
aof25/day1/: day_one.c  day_one.h
